# pico

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  pico-build-workers-fix (1).patch
.github/workflows/: build-workers.yml
services/build-workers/: Dockerfile.linux  Dockerfile.macos  Dockerfile.windows  README.md  package.json  tsconfig.json
services/build-workers/deploy/kubernetes/: hpa.yaml  linux-worker.yaml
services/build-workers/src/: checksum.ts  config.ts  contentTypes.ts  main.ts  processRunner.ts  types.ts  worker.ts  workspace.ts
services/build-workers/tests/: commands.test.ts  schema.test.ts
services/tauri-app-generator/: Cargo.toml
services/tauri-app-generator/src/: lib.rs  main.rs  profile.rs  render.rs  sanitize.rs
services/tauri-app-generator/tests/: generator_tests.rs
services/tauri-app-generator/tests/fixtures/: profile.json
services/website-analyzer/: Dockerfile  package.json  tsconfig.json
services/website-analyzer/db/: schema.sql
services/website-analyzer/docs/: api.md
services/website-analyzer/src/: analyzer.ts  cache.ts  config.ts  detectors.ts  fetcher.ts  repository.ts  server.ts  types.ts  urlPolicy.ts
services/website-analyzer/tests/: analyzer.test.ts  server.test.ts
src/: cli.js  generator.js  gui-preload.js  gui.css  gui.html  gui.js  utils.js
template/: app-config.example.json  app.html  main.js  preload.js
test-run/github/: app-config.example.json  app-config.json  app.html  blocked-domains.json  main.js  package.json
tests/: generator.test.js
(+3 files in other folders)
